# bia-bmz-integration

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_input.txt  batch_input_example.txt  benchmark_bmz_on_bia_data.py  bia_bmz.nf  env.yaml  environment.yml  nextflow.config  pyproject.toml  run_batch.sh  setup_env.sh  testing_inputs.txt
bia_bmz_integration/: __init__.py  run_benchmark_models.py
bia_bmz_integration/tests/: test_process.py
bia_bmz_integrator/data_models/: model_dataset_table.py
bia_bmz_integrator/models/: model_dataset_table.py
bia_bmz_integrator/process/: benchmark.py  image_utils.py  model_dataset.py  predict.py  run_benchmark_models.py
bia_bmz_integrator/scripts/: amalgamate_jsons.py  benchmark_bmz_on_bia_data.py  run_benchmark_bmz_on_bia_data.py  run_bmz_on_bia_data.py
dev/: env.yaml
notebooks/: 0.5-BMZ-library-testing.ipynb  2-OnRemoteZarr.ipynb  BIA_BMZ_benchmarking.ipynb  BIA_BMZ_benchmarking_bulk.ipynb  InitialTesting.ipynb
scripts/: benchmark_bmz_on_bia_data.py  run_benchmark_bmz_on_bia_data.py  run_bmz_on_bia_data.py
