[tool.poetry]
name = "bia-bmz-integration"
version = "0.1.0"
description = ""
authors = ["Craig Russell <ctr26@ebi.ac.uk>"]
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.9"
zarr = "^2.18.2"
dask = "^2024.7.1"
napari = "^0.5.1"
imageio = "^2.34.2"
bioimageio-core = {extras = ["onnx", "pytorch"], version = "^0.6.8"}
tensorflow = "^2.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
